--- a/posts.html
+++ b/posts.html
@@ -4,7 +4,7 @@ title: "Posts"
 permalink: /posts/
 ---
 
-{% for category in site.categories %}
+{% for category in site.tags %}
   {% capture cat %}{{ category | first }}{% endcapture %}
   <h2 id="{{cat}}">{{ cat | capitalize }}</h2>
   {% for desc in site.descriptions %}
@@ -13,7 +13,7 @@ permalink: /posts/
     {% endif %}
   {% endfor %}
   <ul class="posts-list">
-  {% for post in site.categories[cat] %}
+  {% for post in site.tags[cat] %}
     <li>
       <strong>
         <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
