--- a/resources.html
+++ b/resources.html
@@ -10,7 +10,7 @@ permalink: /resources/
   {% for resource in category.items %}
     <li>
       <strong>
-        <a href="{{ resource.link }}">{{ resource.name }}</a>
+        <a href="{{ resource["link"] }}">{{ resource["name"] }}</a>
       </strong>
     </li>
   {% endfor %}
